--- a/static/panel.html
+++ b/static/panel.html
@@ -7,12 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirect...</title>
     <meta name="robots" content="noindex">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L9896Q2CHJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-L9896Q2CHJ');
+    </script>
 </head>
 
-Click here: <a id="fallbackLink" href="https://app.p2pcloud.io">https://app.p2pcloud.io</a>
-
 <body>
-
 
     <script>
         let url = "https://app.p2pcloud.io/"
